--- a/View/nowe.xaml
+++ b/View/nowe.xaml
@@ -6,6 +6,16 @@
              xmlns:local="clr-namespace:SklepexPOL.View"
              mc:Ignorable="d" 
              d:DesignHeight="540" d:DesignWidth="986">
+    <UserControl.Resources>
+        <Style TargetType="TextBlock">
+            <Setter Property="FontSize" Value="18"/>
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="FontSize" Value="18"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="Padding" Value="5,0"/>
+        </Style>
+    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"></ColumnDefinition>
@@ -14,7 +24,9 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"></RowDefinition>
-            <RowDefinition Height="8*"></RowDefinition>
+            <RowDefinition Height="1*"></RowDefinition>
+            <RowDefinition Height="7*"></RowDefinition>
+            <RowDefinition Height="1.4*"></RowDefinition>
             <RowDefinition Height="1*"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.Background>
@@ -24,96 +36,121 @@
         <StackPanel Margin="10" Orientation="Horizontal" 
                     VerticalAlignment="Center" HorizontalAlignment="Left"
                     Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2">
-            <TextBlock Margin="0,0,10,0">Dostawca:</TextBlock>
-            <ComboBox IsEnabled="{Binding DeliveryEnabled}" Width="400"></ComboBox>
+            <TextBlock Margin="0,0,10,0" FontWeight="Bold">Dostawca:</TextBlock>
+            <ComboBox IsEnabled="{Binding DeliveryEnabled}" Width="375"
+                      SelectedIndex="{Binding}" SelectionChanged="{Binding }"
+                      />
         </StackPanel>
-        <!--Info o dostawcy i sumie zamówienia-->
-        <StackPanel Margin="10" Grid.Row="1" Grid.Column="0">
-            <StackPanel>
-                <TextBlock HorizontalAlignment="Center">10%</TextBlock>
-                <TextBlock HorizontalAlignment="Center">Marża dostawcy</TextBlock>
+        <!--Info o dostawcy-->
+        <StackPanel Margin="10" Grid.Row="2" Grid.Column="0">
+            <StackPanel Margin="0,0,0,10">
+                <TextBlock HorizontalAlignment="Center" Text="{Binding}"/>
+                <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Marża dostawcy</TextBlock>
+            </StackPanel>
+            <StackPanel Margin="0,5">
+                <TextBlock HorizontalAlignment="Center" Text="{Binding}"/>
+                <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Czas dostawy</TextBlock>
+            </StackPanel>
+            <StackPanel Margin="0,5">
+                <TextBlock HorizontalAlignment="Center" Text="{Binding}"/>
+                <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Kraj dostawcy</TextBlock>
+            </StackPanel>
+            <StackPanel Margin="0,5">
+                <TextBlock HorizontalAlignment="Center" Text="{Binding}"/>
+                <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Cło</TextBlock>
+            </StackPanel>
+            <StackPanel Margin="0,5">
+                <TextBlock HorizontalAlignment="Center" Text="{Binding}"/>
+                <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Wysokość cła</TextBlock>
             </StackPanel>
             <StackPanel>
-                <TextBlock HorizontalAlignment="Center">5 dni</TextBlock>
-                <TextBlock HorizontalAlignment="Center">Czas dostawy</TextBlock>
-            </StackPanel>
-            <StackPanel>
-                <TextBlock HorizontalAlignment="Center">Polska</TextBlock>
-                <TextBlock HorizontalAlignment="Center">Kraj dostawcy</TextBlock>
-            </StackPanel>
-            <StackPanel>
-                <TextBlock HorizontalAlignment="Center">Brak cła</TextBlock>
-                <TextBlock HorizontalAlignment="Center">Cło</TextBlock>
-            </StackPanel>
-            <StackPanel>
-                <TextBlock HorizontalAlignment="Center">0%</TextBlock>
-                <TextBlock HorizontalAlignment="Center">Wysokość cła</TextBlock>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock HorizontalAlignment="Center">Koszt: </TextBlock>
-                <TextBlock HorizontalAlignment="Center">200$</TextBlock>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock HorizontalAlignment="Center">Marża i potki:</TextBlock>
-                <TextBlock HorizontalAlignment="Center">50$</TextBlock>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock HorizontalAlignment="Center">Suma:</TextBlock>
-                <TextBlock HorizontalAlignment="Center">250$</TextBlock>
+                
+                
             </StackPanel>
         </StackPanel>
         <!--kontrolki zamówienia-->
-        <StackPanel Margin="10" Grid.Row="1" Grid.Column="1">
+        <StackPanel Margin="10" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
             <StackPanel Orientation="Horizontal">
-                <TextBlock>Produkt: </TextBlock>
-                <ComboBox></ComboBox>
+                <TextBlock Margin="13,0,10,0" FontWeight="Bold">Produkt:</TextBlock>
+                <ComboBox Width="375" ItemsSource="{Binding}" 
+                          SelectedIndex="{Binding}"
+                          SelectionChanged="{Binding}"/>
             </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock>Ilość:</TextBlock>
-                <TextBox PreviewTextInput="IntValidator" Width="50" MaxLength="4"></TextBox>
-            </StackPanel>
-            <StackPanel>
-                <TextBlock HorizontalAlignment="Center">1,20 $ BINGIND</TextBlock>
-                <TextBlock HorizontalAlignment="Center">Cena netto</TextBlock>
-            </StackPanel>
-            <StackPanel>
-                <TextBlock HorizontalAlignment="Center">VAT 23% BINDING</TextBlock>
-                <TextBlock HorizontalAlignment="Center">Podatek</TextBlock>
-            </StackPanel>
-            <StackPanel>
-                <TextBlock HorizontalAlignment="Center" Text="{Binding ProPodPer}"/>
-                <TextBlock HorizontalAlignment="Center">Wysokość podatku</TextBlock>
-            </StackPanel>
-
         </StackPanel>
-        <!--listbox-->
-        <StackPanel Margin="10" Grid.Row="1" Grid.Column="2" VerticalAlignment="Top" Width="470">
-            <ListView Height="410">
+        <StackPanel Margin="10" Grid.Row="2" Grid.Column="1">
+            <StackPanel Orientation="Horizontal" Margin="10" HorizontalAlignment="Center">
+                <TextBlock Margin="0,0,10,0" FontWeight="Bold">Ilość:</TextBlock>
+                <TextBox PreviewTextInput="IntValidator" Width="60" MaxLength="4" Text="{Binding}"/>
+            </StackPanel>
+            <StackPanel Margin="0,10">
+                <TextBlock HorizontalAlignment="Center" Text="{Binding}"/>
+                <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Cena netto</TextBlock>
+            </StackPanel>
+            <StackPanel Margin="0,10">
+                <TextBlock HorizontalAlignment="Center" Text="{Binding}"/>
+                <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Podatek</TextBlock>
+            </StackPanel>
+            <StackPanel Margin="0,10">
+                <TextBlock HorizontalAlignment="Center" Text="{Binding ProPodPer}"/>
+                <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Wysokość podatku</TextBlock>
+            </StackPanel>
+        </StackPanel>
+        <!--listview-->
+        <StackPanel Margin="10" Grid.Row="1" Grid.RowSpan="3" Grid.Column="2" VerticalAlignment="Top" Width="470">
+            <ListView Height="420" ItemsSource="{Binding ShoppingCart}">
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn Header="Produkt" Width="260"/>
-                        <GridViewColumn Header="Ilość" Width="100"/>
-                        <GridViewColumn Header="Cena" Width="100"/>
+                        <GridViewColumn Header="Produkt" Width="260" DisplayMemberBinding="{Binding Name}"/>
+                        <GridViewColumn Header="Ilość" Width="60" DisplayMemberBinding="{Binding Count}"/>
+                        <GridViewColumn Header="Cena" Width="90" DisplayMemberBinding="{Binding Cost}"/>
+                        <GridViewColumn Header="Usuń" Width="50">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Button Content="-" 
+                                            Command="{Binding Action}" 
+                                            CommandParameter="{Binding ID}"
+                                            Width="30"/>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
                     </GridView>
                 </ListView.View>
                 <ListViewItem>asd</ListViewItem>
             </ListView>
         </StackPanel>
-        <!--buttony usuń dodaj zmień-->
-        <StackPanel Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" 
+        <!--buttony-->
+        <StackPanel Grid.Row="4" Grid.Column="1" 
                     Orientation="Horizontal" VerticalAlignment="Center" 
-                    HorizontalAlignment="Center" Margin="10">
-            <Button>Dodaj</Button>
-            <Button>Edytuj</Button>
-            <Button>Usuń</Button>
+                    HorizontalAlignment="Right" Margin="10,0">
+            <Button Command="{Binding}">Dodaj</Button>
+        </StackPanel>
+        <!--matematyka-->
+        <StackPanel Margin="0,10" Grid.Row="3" Grid.ColumnSpan="2" Grid.Column="0">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock HorizontalAlignment="Center" FontWeight="Bold" Margin="10,0">Koszt:</TextBlock>
+                <TextBlock HorizontalAlignment="Center" Text="{Binding}"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock HorizontalAlignment="Center" FontWeight="Bold" Margin="10,0">Marża i podatki:</TextBlock>
+                <TextBlock HorizontalAlignment="Center" Text="{Binding}"/>
+            </StackPanel>
+        </StackPanel>
+        <StackPanel Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" Width="410">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock HorizontalAlignment="Center" FontWeight="Bold" Margin="10,0">Suma:</TextBlock>
+                <TextBlock HorizontalAlignment="Center" Text="{Binding}"/>
+            </StackPanel>
         </StackPanel>
         <!--kwota zamówienia i przycisk złożenia zamówienia-->
-        <StackPanel Grid.Row="2" Grid.Column="2" Margin="10" Orientation="Horizontal">
-            <StackPanel Orientation="Horizontal">
-                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center">Kwota zamówienia:</TextBlock>
-                <TextBox>1000000000 $ BINDING</TextBox>
+        <StackPanel Grid.Row="0" Grid.Column="2" VerticalAlignment="Center" Margin="10">
+            <StackPanel Orientation="Horizontal" Margin="0,0,10,0">
+                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,10,0" FontWeight="Bold">Kwota zamówienia:</TextBlock>
+                <TextBlock VerticalAlignment="Center" Margin="0,0,10,0" Width="285"  Text="{Binding}"/>
             </StackPanel>
-            <Button>Złóż zamówienie</Button>
+        </StackPanel>
+        <StackPanel Grid.Row="4" Grid.Column="2" Margin="10,0" Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button Margin="10,0" Command="{Binding}">Wyczyść listę</Button>
+            <Button Margin="10,0" Command="{Binding}">Złóż zamówienie</Button>
         </StackPanel>
     </Grid>
 </UserControl>
