--- a/View/nowe.xaml
+++ b/View/nowe.xaml
@@ -15,6 +15,9 @@
             <Setter Property="Height" Value="30"/>
             <Setter Property="Padding" Value="5,0"/>
         </Style>
+        <Style TargetType="ListViewItem">
+            <Setter Property="FontSize" Value="12"/>
+        </Style>
     </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -115,16 +118,22 @@
         </StackPanel>
         <!--listview-->
         <StackPanel Margin="10" Grid.Row="1" Grid.RowSpan="3" Grid.Column="2" VerticalAlignment="Top" Width="470">
-            <ListView Height="420" ItemsSource="{Binding ShoppingCart}">
+            <ListView Height="420" x:Name="listView" ItemsSource="{Binding ShoppingCart}">
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn Header="Produkt" Width="260" DisplayMemberBinding="{Binding Name}"/>
+                        <GridViewColumn Header="Produkt" Width="260" DisplayMemberBinding="{Binding PName}">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding PName}"/>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
                         <GridViewColumn Header="Ilość" Width="60" DisplayMemberBinding="{Binding Count}"/>
                         <GridViewColumn Header="Cena" Width="90" DisplayMemberBinding="{Binding Cost}"/>
                         <GridViewColumn Header="Usuń" Width="50">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
-                                    <Button Content="-" 
+                                    <Button Content="X" 
                                             Command="{Binding Action}" 
                                             CommandParameter="{Binding ID}"
                                             Width="30"/>
@@ -139,7 +148,7 @@
         <StackPanel Grid.Row="4" Grid.Column="1" 
                     Orientation="Horizontal" VerticalAlignment="Center" 
                     HorizontalAlignment="Right" Margin="10,0">
-            <Button Command="{Binding}" CommandParameter="{Binding ElementName=CountBox, Path=Text}">Dodaj</Button>
+            <Button Command="{Binding OrderAddPosition}">Dodaj</Button>
         </StackPanel>
         <!--matematyka-->
         <StackPanel Margin="0,10" Grid.Row="3" Grid.ColumnSpan="2" Grid.Column="0">
@@ -166,8 +175,8 @@
             </StackPanel>
         </StackPanel>
         <StackPanel Grid.Row="4" Grid.Column="2" Margin="10,0" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Margin="10,0" Command="{Binding}">Wyczyść listę</Button>
-            <Button Margin="10,0" Command="{Binding}">Złóż zamówienie</Button>
+            <Button Margin="10,0" Command="{Binding OrderClear}">Wyczyść listę</Button>
+            <Button Margin="10,0" Command="{Binding OrderSubmit}">Złóż zamówienie</Button>
         </StackPanel>
     </Grid>
 </UserControl>
