--- a/View/nowe.xaml
+++ b/View/nowe.xaml
@@ -7,7 +7,10 @@
              mc:Ignorable="d" 
              d:DesignHeight="540" d:DesignWidth="986">
     <UserControl.Resources>
-        <Style TargetType="TextBlock">
+        <Style TargetType="TextBlock" x:Key="listBlock">
+            <Setter Property="FontSize" Value="12"/>
+        </Style>
+        <Style TargetType="TextBlock" x:Key="txtBlock">
             <Setter Property="FontSize" Value="18"/>
         </Style>
         <Style TargetType="Button">
@@ -15,9 +18,7 @@
             <Setter Property="Height" Value="30"/>
             <Setter Property="Padding" Value="5,0"/>
         </Style>
-        <Style TargetType="ListViewItem">
-            <Setter Property="FontSize" Value="12"/>
-        </Style>
+        
     </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -39,7 +40,7 @@
         <StackPanel Margin="10" Orientation="Horizontal" 
                     VerticalAlignment="Center" HorizontalAlignment="Left"
                     Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2">
-            <TextBlock Margin="0,0,10,0" FontWeight="Bold">Dostawca:</TextBlock>
+            <TextBlock Margin="0,0,10,0" FontWeight="Bold" Style="{StaticResource txtBlock}">Dostawca:</TextBlock>
             <ComboBox IsEnabled="{Binding DeliveryEnabled}" Width="375" x:Name="sellerBox"
                       ItemsSource="{Binding Sellers}" SelectedItem="{Binding SelectedSeller}"
                       SelectedIndex="{Binding LOSIndex}">
@@ -55,24 +56,24 @@
         <!--Info o dostawcy-->
         <StackPanel Margin="10" Grid.Row="2" Grid.Column="0">
             <StackPanel Margin="0,0,0,10">
-                <TextBlock HorizontalAlignment="Center" Text="{Binding SelectedSeller.Margin}"/>
-                <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Marża dostawcy</TextBlock>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" Text="{Binding SelectedSeller.Margin}"/>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" FontWeight="Bold">Marża dostawcy</TextBlock>
             </StackPanel>
             <StackPanel Margin="0,5">
-                <TextBlock HorizontalAlignment="Center" Text="{Binding SelectedSeller.DDays}"/>
-                <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Czas dostawy</TextBlock>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" Text="{Binding SelectedSeller.DDays}"/>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" FontWeight="Bold">Czas dostawy</TextBlock>
             </StackPanel>
             <StackPanel Margin="0,5">
-                <TextBlock HorizontalAlignment="Center" Text="{Binding SelectedSeller.Country}"/>
-                <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Kraj dostawcy</TextBlock>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" Text="{Binding SelectedSeller.Country}"/>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" FontWeight="Bold">Kraj dostawcy</TextBlock>
             </StackPanel>
             <StackPanel Margin="0,5">
-                <TextBlock HorizontalAlignment="Center" Text="{Binding SelectedSeller.TaxName}"/>
-                <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Cło</TextBlock>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" Text="{Binding SelectedSeller.TaxName}"/>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" FontWeight="Bold">Cło</TextBlock>
             </StackPanel>
             <StackPanel Margin="0,5">
-                <TextBlock HorizontalAlignment="Center" Text="{Binding SelectedSeller.TaxCost}"/>
-                <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Wysokość cła</TextBlock>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" Text="{Binding SelectedSeller.TaxCost}"/>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" FontWeight="Bold">Wysokość cła</TextBlock>
             </StackPanel>
             <StackPanel>
                 
@@ -82,7 +83,7 @@
         <!--kontrolki zamówienia-->
         <StackPanel Margin="10" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Margin="13,0,10,0" FontWeight="Bold">Produkt:</TextBlock>
+                <TextBlock Style="{StaticResource txtBlock}" Margin="13,0,10,0" FontWeight="Bold">Produkt:</TextBlock>
                 <ComboBox x:Name="productsBox" Width="375" 
                           ItemsSource="{Binding Products}" 
                           SelectedItem="{Binding SelectedProduct}"
@@ -99,32 +100,32 @@
         </StackPanel>
         <StackPanel Margin="10" Grid.Row="2" Grid.Column="1">
             <StackPanel Orientation="Horizontal" Margin="10" HorizontalAlignment="Center">
-                <TextBlock Margin="0,0,10,0" FontWeight="Bold">Ilość:</TextBlock>
+                <TextBlock Style="{StaticResource txtBlock}" Margin="0,0,10,0" FontWeight="Bold">Ilość:</TextBlock>
                 <TextBox PreviewTextInput="IntValidator" Width="60" MaxLength="4" 
                          x:Name="CountBox" Text="{Binding ProductCountS, UpdateSourceTrigger=PropertyChanged}" FontSize="18"/>
             </StackPanel>
             <StackPanel Margin="0,10">
-                <TextBlock HorizontalAlignment="Center" Text="{Binding SelectedProduct.Price}"/>
-                <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Cena netto</TextBlock>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" Text="{Binding SelectedProduct.Price}"/>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" FontWeight="Bold">Cena netto</TextBlock>
             </StackPanel>
             <StackPanel Margin="0,10">
-                <TextBlock HorizontalAlignment="Center" Text="{Binding SelectedProduct.TaxName}"/>
-                <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Podatek</TextBlock>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" Text="{Binding SelectedProduct.TaxName}"/>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" FontWeight="Bold">Podatek</TextBlock>
             </StackPanel>
             <StackPanel Margin="0,10">
-                <TextBlock HorizontalAlignment="Center" Text="{Binding SelectedProduct.TaxCost}"/>
-                <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Wysokość podatku</TextBlock>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" Text="{Binding SelectedProduct.TaxCost}"/>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" FontWeight="Bold">Wysokość podatku</TextBlock>
             </StackPanel>
         </StackPanel>
         <!--listview-->
         <StackPanel Margin="10" Grid.Row="1" Grid.RowSpan="3" Grid.Column="2" VerticalAlignment="Top" Width="470">
-            <ListView Height="420" x:Name="listView" ItemsSource="{Binding ShoppingCart}">
+            <ListView Height="420" x:Name="listView" ItemsSource="{Binding ShoppingCart}" FontSize="12">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Produkt" Width="260" DisplayMemberBinding="{Binding PName}">
-                            <GridViewColumn.CellTemplate>
-                                <DataTemplate>
-                                    <TextBlock Text="{Binding PName}"/>
+                            <GridViewColumn.CellTemplate >
+                                <DataTemplate >
+                                    <TextBlock Style="{StaticResource listBlock}" FontSize="12"/>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
@@ -136,7 +137,10 @@
                                     <Button Content="X" 
                                             Command="{Binding Action}" 
                                             CommandParameter="{Binding ID}"
-                                            Width="30"/>
+                                            Width="30"
+                                            Background="Transparent"
+                                            BorderThickness="0"
+                                            Foreground="Red"/>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
@@ -153,25 +157,25 @@
         <!--matematyka-->
         <StackPanel Margin="0,10" Grid.Row="3" Grid.ColumnSpan="2" Grid.Column="0">
             <StackPanel Orientation="Horizontal">
-                <TextBlock HorizontalAlignment="Center" FontWeight="Bold" Margin="10,0">Koszt:</TextBlock>
-                <TextBlock HorizontalAlignment="Center" Text="{Binding ProductCost}"/>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" FontWeight="Bold" Margin="10,0">Koszt:</TextBlock>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" Text="{Binding ProductCost}"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal">
-                <TextBlock HorizontalAlignment="Center" FontWeight="Bold" Margin="10,0">Marża i podatki:</TextBlock>
-                <TextBlock HorizontalAlignment="Center" Text="{Binding ProductTaxes}"/>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" FontWeight="Bold" Margin="10,0">Marża i podatki:</TextBlock>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" Text="{Binding ProductTaxes}"/>
             </StackPanel>
         </StackPanel>
         <StackPanel Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Left" VerticalAlignment="Center" Width="410">
             <StackPanel Orientation="Horizontal">
-                <TextBlock HorizontalAlignment="Center" FontWeight="Bold" Margin="10,0">Suma:</TextBlock>
-                <TextBlock HorizontalAlignment="Center" Text="{Binding ProductSum}"/>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" FontWeight="Bold" Margin="10,0">Suma:</TextBlock>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" Text="{Binding ProductSum}"/>
             </StackPanel>
         </StackPanel>
         <!--kwota zamówienia i przycisk złożenia zamówienia-->
         <StackPanel Grid.Row="0" Grid.Column="2" VerticalAlignment="Center" Margin="10">
             <StackPanel Orientation="Horizontal" Margin="0,0,10,0">
-                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,10,0" FontWeight="Bold">Kwota zamówienia:</TextBlock>
-                <TextBlock VerticalAlignment="Center" Margin="0,0,10,0" Width="285"  Text="{Binding OrderCost}"/>
+                <TextBlock Style="{StaticResource txtBlock}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,10,0" FontWeight="Bold">Kwota zamówienia:</TextBlock>
+                <TextBlock Style="{StaticResource txtBlock}" VerticalAlignment="Center" Margin="0,0,10,0" Width="285"  Text="{Binding OrderCost}"/>
             </StackPanel>
         </StackPanel>
         <StackPanel Grid.Row="4" Grid.Column="2" Margin="10,0" Orientation="Horizontal" HorizontalAlignment="Right">
